@@ -1,3 +1,8 @@
+2009-09-22  Richard Sandiford  <rdsandiford@googlemail.com>
+
+	* objdump.c (disassemble_section): Use bfd_get_arch_size
+	instead of assuming that the address size is 32 bits.
+
 2009-09-21  Alan Modra  <amodra@bigpond.net.au>
 
 	* readelf.c (get_ppc_dynamic_type): Add TLSOPT.
